cleanup some commented lines, add os.path

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,28 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "235f4a05",
-   "metadata": {},
-   "source": [
-    "# Installs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "34665940",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "# !{sys.executable} -m pip install --upgrade pip\n",
-    "# !pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128\n",
-    "# !pip install matplotlib\n",
-    "# !pip install tqdm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a1153292",
    "metadata": {},
    "source": [
@@ -48,6 +26,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -504,7 +483,7 @@
     }
    ],
    "source": [
-    "# classsificator.load_model('models\\\\class_ckpt_epoch_9.pt')\n",
+    "classsificator.load_model(os.path.join('models', 'class_ckpt_epoch_9.pt'))\n",
     "print(f'Classificartion model test')\n",
     "test_acc, test_loss = classsificator.test()"
    ]
