--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,28 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "235f4a05",
-   "metadata": {},
-   "source": [
-    "# Installs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "34665940",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "# !{sys.executable} -m pip install --upgrade pip\n",
-    "# !pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128\n",
-    "# !pip install matplotlib\n",
-    "# !pip install tqdm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a1153292",
    "metadata": {},
    "source": [
@@ -32,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bffadad0",
    "metadata": {},
    "outputs": [
@@ -48,6 +26,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -127,12 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "46a7e1f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = MyNN(in_channels=1, output=2, activator='relu', input_size=(64, 64))\n",
     "model = FC2LNN(64*64, 2)\n",
     "opt = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "sheduler = Sheduler(opt, mode='min', factor=0.1, patience=4, threshold=0.001)\n",
@@ -1059,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e021dec7",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1073,7 @@
     }
    ],
    "source": [
-    "regression.load_model('models\\\\reg_ckpt_epoch_57.pt')\n",
+    "regression.load_model(os.path.join('models', 'reg_ckpt_epoch_57.pt'))\n",
     "print(f'Regression model test')\n",
     "test_acc, test_loss = regression.test()"
    ]
